--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
 sudo: required
 
-language: python
-
-services:
-  - docker
+language: generic
 
 env:
   - BCBIO_DOCKER_PRIVILEGED=True
 
 before_install:
+  - sudo apt-get install docker
+  - sudo service docker start
   # Temporal fix for networking problem: https://github.com/travis-ci/travis-ci/issues/1484
   - echo "127.0.1.1 "`hostname` | sudo tee /etc/hosts
   # Get and install anaconda for custom Python installation
